--- a/main.html
+++ b/main.html
@@ -1,1 +1,32 @@
+<header>
+        <img src="your_profile_picture.jpg" alt="Mohit Kumar">
+        <h1>Name</h1>
+        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    </header>
 
+    <section>
+        <h2>Profile</h2>
+        <p>Position you are applying for</p>
+    </section>
+
+    <section>
+        <h2>About Me</h2>
+        <p>Brief description of yourself goes here. Highlight your qualifications, experience, and interests.</p>
+    </section>
+
+    <section>
+        <h2>Skills</h2>
+        <div class="skill">
+            <div class="skill-bar">
+                <span class="skill-bar-label">Skill 1</span>
+                <div class="skill-bar-bar" style="width: 80%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <div class="skill-bar">
+                <span class="skill-bar-label">Skill 2</span>
+                <div class="skill-bar-bar" style="width: 70%;"></div>
+            </div>
+        </div>
+        <!-- Add more skills as needed -->
+    </section>
