--- a/main.html
+++ b/main.html
@@ -6,12 +6,12 @@
 
     <section>
         <h2>Profile</h2>
-        <p>Position you are applying for</p>
+        <p>Web Devloper</p>
     </section>
 
     <section>
         <h2>About Me</h2>
-        <p>Brief description of yourself goes here. Highlight your qualifications, experience, and interests.</p>
+        <p>Hello, I'm MOHIT KUMAR, and I'm delighted to share a bit about myself with you. I believe that every individual is a unique story waiting to be told, and here's a glimpse into mine:</p>
     </section>
 
     <section>
