--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     </section>
 
     <section>
-        <h2>About Me</h2>
+        <h2>About me</h2>
         <p>Hello, I'm MOHIT KUMAR, and I'm delighted to share a bit about myself with you. I believe that every individual is a unique story waiting to be told, and here's a glimpse into mine:</p>
     </section>
 
